@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.1.RELEASE</version>
+		<version>2.5.15</version>
 	</parent>
 
 	<artifactId>uniprot-rest-api</artifactId>
@@ -22,16 +22,18 @@
 	</description>
 
 	<properties>
+		<jackson-bom.version>2.13.4</jackson-bom.version>
+		<jackson.version>2.13.4</jackson.version>
 		<uniprot-store.version>${project.version}</uniprot-store.version>
 		<uniprot-core.version>${project.version}</uniprot-core.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<maven.compiler.version>3.8.0</maven.compiler.version>
-		<java.version>11</java.version>
-		<jacoco.version>0.8.5</jacoco.version>
+		<java.version>17</java.version>
+		<jacoco.version>0.8.8</jacoco.version>
 		<maven-jar-plugin.version>3.1.0</maven-jar-plugin.version>
 
-		<spring.boot.version>2.3.1.RELEASE</spring.boot.version>
+		<spring.boot.version>2.5.15</spring.boot.version>
 		<http-uniprot-private-url>https://wwwdev.ebi.ac.uk/uniprot/artifactory</http-uniprot-private-url>
 		<failsafe.version>2.0.1</failsafe.version>
 		<solr.core>8.5.2</solr.core>
@@ -40,6 +42,7 @@
 		<mockito.jupiter.version>3.3.3</mockito.jupiter.version>
 		<junit-platform.version>5.6.2</junit-platform.version>
 		<commons-compress.version>1.20</commons-compress.version>
+		<lombok.version>1.18.22</lombok.version>
 
 		<!-- Use most recent failsafe and surefire plugin versions -->
 		<maven-failsafe-plugin.version>2.22.0</maven-failsafe-plugin.version>
@@ -275,7 +278,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
-					<argLine>-Xmx3584m -XX:MaxPermSize=3584m
+					<argLine>-Xmx3584m
+						-XX:MaxMetaspaceSize=3584m
 						-Dlogback.configurationFile=${project.basedir}/../logback-test.xml
 						${argLine}</argLine>
 					<includes>
